crates/parser/tests/cases/snapshots/cases__errors__emit_no_args.snap
---
source: parser/tests/cases/errors.rs
expression: "err_string(stringify!(emit_no_args), functions::parse_stmt, true, \"emit x\")"

---
error: unexpected end of file
  ┌─ emit_no_args:1:7
  │
1 │ emit x
  │       ^


