crates/parser/tests/cases/snapshots/cases__errors__expr_assignment.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(expr_assignment), expressions::parse_expr,\n           \"1 + (x = y)\")"

---
error: Unexpected token while parsing expression in parentheses
  ┌─ expr_assignment:1:8
  │
1 │ 1 + (x = y)
  │        ^ unexpected token


