crates/parser/tests/cases/snapshots/cases__errors__expr_bad_prefix.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(expr_bad_prefix), expressions::parse_expr, true,\n           \"*x + 1\")"

---
error: Unexpected token while parsing expression: `*`
  ┌─ expr_bad_prefix:1:1
  │
1 │ *x + 1
  │ ^ unexpected token


