crates/parser/tests/cases/snapshots/cases__errors__expr_number_end_with_underscore.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(expr_number_end_with_underscore),\n           expressions::parse_expr, \"42_42_\")"

---

