crates/parser/tests/cases/snapshots/cases__errors__expr_path_right.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(expr_path_right), expressions::parse_expr, true,\n           \"foo::10::bar\")"

---
error: failed to parse path expression
  ┌─ expr_path_right:1:6
  │
1 │ foo::10::bar
  │    --^^ expected a name
  │    │  
  │    path delimiter


