crates/parser/tests/cases/snapshots/cases__errors__fn_def_no_paren.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(fn_def_no_paren), contracts::parse_contract_def, true,\n           \"contract C:\\n pub def f:\\n  pass\")"

---
error: failed to parse field definition
  ┌─ fn_def_no_paren:2:10
  │
2 │  pub def f:
  │          ^ Unexpected token. Expected `:`
  │
  = Hint: use `fn` to define a function
  = Example: `pub fn f( ...`
  = Note: field name must be followed by a colon and a type description
  = Example: pub def: address


