crates/parser/tests/cases/snapshots/cases__errors__fn_invalid_bound.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(fn_invalid_bound), module::parse_module,\n    \"pub fn f<T:(u8, u8)>() {}\")"

---
error: failed to parse generic bound
  ┌─ fn_invalid_bound:1:12
  │
1 │ pub fn f<T:(u8, u8)>() {}
  │            ^ expected a name, found symbol `(`


